--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@ independent of specific robot implementation.
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>sensors_msgs</run_depend>
   <run_depend>tf</run_depend>
 </package>
 
